Defaulted new users to white theme with purple accent. Fixed strange bug where screen shifted when height was greater than 655px when main content wasn't fixed in width.

--- a/src/CSS Components/Dashboard.css
+++ b/src/CSS Components/Dashboard.css
@@ -11,6 +11,8 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  /*Fixes strange bug where screen shifts a couple pixels*/
+  max-width: 1914px;
 }
 .dashboard-content {
   display: flex;
